--- a/package.json
+++ b/package.json
@@ -3,20 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "0.9.x",
     "moment": "^2.18.1",
+    "react": "^15.6.1",
     "react-addons-shallow-compare": "^15.6.0",
     "react-dates": "^12.6.0",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
+    "react-scripts": "1.0.13",
     "redux": "^3.7.2",
     "redux-form": "^7.0.4",
     "reselect": "^3.0.1",
-    "tachyons": "^4.8.1",
-    "redux-form": "^7.0.4",
-    "reselect": "^3.0.1",
     "tachyons": "^4.8.1"
-
   },
   "devDependencies": {},
   "scripts": {
